# MaHyCo

./: .gitignore  .travis.yml  ArcaneCompilerConfig.cmake  CMakeLists.txt  COPYRIGHT  ConditionsLimites.cc  EucclhydRemap.cc  EucclhydRemap.h  Init.cc  PhaseLagrange.cc  PhaseRemap1.cc  PhaseRemap2.cc  PhaseRemapFinal.cc  README.md  README.txt  Readme.md  Samples.dox  SchemaParticules.cc  TODO_particule.md  Utiles-Impl.h  Utiles.cc  UtilesRemap-Impl.h  UtilesRemap.cc  check_format.sh  compile_commands.json  mahyco.common.cmake  main.cc  memo_cmake.sh  non_reg.md
cppnabla/: CMakeLists.txt
cppnabla/mesh/: CartesianMesh2D.cc  CartesianMesh2D.h  CartesianMesh2DGenerator.cc
cppnabla/types/: LinearAlgebraFunctions.cc  MathFunctions.h  Matrix.cc
eucclhyd_remap/: CMakeLists.txt  ConditionsLimites.cc  EucclhydRemap.cc  EucclhydRemap.h  Init.cc  PhaseLagrange.cc  PhaseRemap1.cc  PhaseRemap2.cc  PhaseRemapFinal.cc  SchemaParticules.cc  Utiles-Impl.h  Utiles.cc  UtilesRemap-Impl.h  UtilesRemap.cc
src/: AcceleratorUtils.h  CMakeLists.txt  Ipg.axl  IpgModule.cc  IpgModule.h  Mahyco.arc  Mahyco.axl  Mahyco.config  MahycoAnnexe.cc  MahycoConfig.cmake.in  MahycoModule.cc  MahycoModule.h  PhaseRemapFinal.cc  PrepareRemap.cc  TypesIpg.h  TypesMahyco.h  bascule_ref.sh  main.cc  mathUtils.h
src/.kdev4/: src.kdev4
src/Cinetique_chgt_phase/: CineTest22_cine_Sinit.f90  CineTest22_cine_Variables.f90  CineTest22_couplage_Sinit.f90  CineTest22_couplage_tools.f90  CineTest22_couplage_ve.f90  CineTest22_ee_Polygone.f90  CineTest22_ee_Sinit.f90  CineTest22_ee_Variables.f90  CineTest22_ee_calc_pt.f90  CineTest22_ee_calc_ve.f90  CineTest22_ee_calc_vt.f90  CineTest22_ee_equi_Newton.f90  CineTest22_ee_equi_PT.f90  CineTest22_ee_init_tools.f90  CineTest22_ee_interpol_EOS.f90  CineTest22_main.f90  M_lec.f90
src/Initialisations/: InitRider.cc  InitSEDOV.cc  InitSOD.cc  InitUnitTest.cc
src/Remap/: CMakeLists.txt  DualPhaseRemap.cc  DualPhaseRemapArcane.cc  DualPhaseRemapArcane.cc_ori  DualPhaseRemapArcane_inti.cc  IRemap.h  PhaseRemap.cc  Remap-ordre-3.cc  RemapADI.axl  RemapADIFinal.cc  RemapADIService.cc  RemapADIService.h  RemapALE.axl  RemapALEService.cc  RemapALEService.h  RemapArcane-ordre-3.cc  RemapArcane.axl  RemapArcaneFinal.cc  RemapArcaneService.cc  RemapArcaneService.h  UtilesRemap.cc  UtilesRemapALE.cc  UtilesRemapArcane.cc
src/accenv/: AccEnv.axl  AccEnvDefault.axl  AccEnvDefaultOptions.h  AccEnvDefaultService.cc  AccEnvDefaultService.h  AccEnvModule.cc  AccEnvModule.h  AcceleratorUtils.h  BufAddrMng.h  CMakeLists.txt  IAccEnv.h  IncidentHandler.h  IndexSelecter.h  MultiEnvMng.cc  MultiEnvMng.h  MultiEnvUtils.h  ProfAcc.cc  ProfAcc.h  SingletonIAccEnv.h  SortSmall.h  UtilsAtomic.h
src/cartesian/: CMakeLists.txt  CartCartesianMeshT.h  CartCellDirectionMng.h  CartConnectivityCellFaceNode.h  CartConnectivityCellNode.h  CartConnectivityNodeCell.h  CartFaceDirectionMng.h  CartItemEnumeratorT.h  CartItemGroup.h  CartLocalIdNumberingT.h  CartNeighCells.h  CartNodeDirectionMng.h  CartStencilDirItemT.h  CartTypes.h  CartesianConnectivity.cc  CartesianConnectivity.h  CartesianFaceId.h  CartesianGlobal.h  CartesianGridT.h  CartesianItemSorter.cc  CartesianItemSorter.h  CartesianMesh.cc  CartesianMeshProperties.h  CartesianMeshT.h  CartesianNumberingT.h  CellDirectionMng.cc  CellDirectionMng.h  FaceDirectionMng.cc  FaceDirectionMng.h  FactCartDirectionMng.h  ICartesianMesh.h  Interval3T.h  NodeDirectionMng.cc  NodeDirectionMng.h  NumberingConverterT.h  UnstructCartesianMeshT.h  UnstructConnectivityCellFaceNode.h  UnstructConnectivityCellNode.h  UnstructNeighCells.h
src/cartesian/interface/: CartesianConnectivity.h  CartesianDefines.h  CartesianNamespace.h  CellDirectionMng.h  FaceDirectionMng.h  ICartesianMesh.h  NodeDirectionMng.h
src/casTest/: CMakeLists.txt  IInitialisations.h
src/casTest/ADVECTION/: ADVECTION.axl  ADVECTIONService.cc  ADVECTIONService.h
src/elasto/: DefaultModel.axl  DefaultModelService.cc  DefaultModelService.h  IElasto.h  NewHypoModel.axl  NewHypoModelService.cc  NewHypoModelService.h  NoModel.axl  NoModelService.cc  NoModelService.h
src/elastoMu/: EPP.axl  EPPService.cc  EPPService.h  IElastoMu.h  JC.axl  JCService.cc  JCService.h  MTS.axl  MTSService.cc  MTSService.h  SCG.axl  SCGService.cc  SCGService.h
src/elastoY/: IElastoY.h  YEPP.axl  YEPPService.cc  YEPPService.h  YJC.axl  YJCService.cc  YJCService.h  YMTS.axl  YMTSService.cc  YMTSService.h  YSCG.axl  YSCGService.cc  YSCGService.h
src/eos/: CMakeLists.txt  IEquationOfState.h
src/ipg_creation_of_particles/: ICreationOfParticles.h  utilsIpg.h
src/ipg_output/: IIpgOutput.h  VtkAscii.axl  VtkAsciiService.cc  VtkAsciiService.h
src/ipg_solver/: ISprayType.h
src/msgpass/: Algo1SyncDataD.cc  Algo1SyncDataD.h  Algo1SyncDataDH.cc  Algo1SyncDataDH.h  Algo1SyncDataGlobD.cc  Algo1SyncDataGlobD.h  Algo1SyncDataGlobDH.cc  Algo1SyncDataGlobDH.h  Algo1SyncDataMMatD.cc  Algo1SyncDataMMatD.h  Algo1SyncDataMMatDH.cc  Algo1SyncDataMMatDH.h  CMakeLists.txt  ComputeAndSync.h  ComputeMatAndSync.h  EnumerateEnvAndSync.h  GlobalSynchronize.cc  GlobalSynchronizeDevQueues.cc  GlobalSynchronizeDevThr.cc  GlobalSynchronizeQueue.cc  GlobalSynchronizeQueueEvent.cc  GlobalSynchronizeQueueEventD.cc  IAlgo1SyncData.h  IncompleteGlobalSynchronizeQueue.cc  IsCommDeviceAware.cc  MeshVariableSynchronizerList.cc  MeshVariableSynchronizerList.h  MsgPassInit.cc  MultiMatSynchronize.cc  PackTransfer.cc  PackTransfer.h  SyncAndCompute.h  SyncBuffers.cc  SyncBuffers.h  SyncEnvIndexes.cc  SyncEnvIndexes.h  SyncItems.cc  SyncItems.h  VarSyncAlgo1.cc  VarSyncAlgo1.h  (+3 more)
src/time_history/: CellWatching.axl  CellWatchingService.cc  CellWatchingService.h  EnvSummation.axl  EnvSummationService.cc  EnvSummationService.h  ITimeHistoryCategory.h  NodeWatching.axl  NodeWatchingService.cc  NodeWatchingService.h  TimeHistory.axl  TimeHistoryModule.cc  TimeHistoryModule.h
src/yandg/: EPP.axl  EPPService.cc  EPPService.h  IYandG.h  JC.axl  JCService.cc  JCService.h  MTS.axl  MTSService.cc  MTSService.h  SCG.axl  SCGService.cc  SCGService.h
(+13962 files in other folders)
